<resources>
    <string name="app_name">Nowledge</string>
    <string name="title_home">学科列表</string>
    <string name="title_link">知识链接</string>
    <string name="title_robot">机器问答</string>
    <string name="button_send">发送</string>
    <string name="search_hint">请输入查询内容</string>
    <string name="clear">清除</string>
    <string name="relation_detail">详情</string>
    <string name="title_activity_new_entity">NewEntityActivity</string>
    <string name="tab_text_1">详情</string>
    <string name="tab_text_2">相关习题</string>

    <string name="tip_drag">长按编辑,拖拽排序</string>
    <string name="my_cahnnel">我的学科</string>
    <string name="other_channel">其他学科</string>
    <string name="edit">编辑</string>
    <string name="finish">完成</string>
</resources>