<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.nowledge.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_link"
        android:name="com.example.nowledge.ui.link.LinkFragment"
        android:label="@string/title_link"
        tools:layout="@layout/fragment_link" />

    <fragment
        android:id="@+id/navigation_robot"
        android:name="com.example.nowledge.ui.robot.RobotFragment"
        android:label="@string/title_robot"
        tools:layout="@layout/fragment_robot" />
</navigation>