<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="56dp">

    <TextView
        android:id="@+id/tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="16dp"
        android:textColor="@color/purple_700"
        android:text="@string/my_cahnnel"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/tv"
        android:layout_marginLeft="16dp"
        android:layout_toRightOf="@id/tv"
        android:text="@string/tip_drag"
        android:textColor="@color/purple"
        android:textSize="12sp"/>

    <TextView
        android:id="@+id/tv_btn_edit"
        android:layout_width="56dp"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="8dp"
        android:background="@drawable/bg_btn"
        android:gravity="center"
        android:text="@string/edit"
        android:textColor="@color/coral"
        android:textSize="13sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:background="@color/purple_200" />
</RelativeLayout>