<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.link.LinkFragment">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="52dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="208dp"
                android:layout_margin="20dp"
                android:visibility="visible"
                app:cardBackgroundColor="#F3E9FF"
                app:cardCornerRadius="10dp"
                app:contentPadding="10dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:id="@+id/linearLayout"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"

                            android:orientation="horizontal">

                            <Button
                                android:id="@+id/link_button_clear"
                                android:layout_width="72dp"
                                android:layout_height="match_parent"

                                android:layout_marginLeft="@dimen/link_search_margin_horiz"

                                android:backgroundTint="#7A7B81"
                                android:text="@string/clear" />

                            <Spinner
                                android:id="@+id/spinner_link"
                                android:layout_width="70dp"
                                android:layout_height="match_parent"
                                android:layout_gravity="right"
                                android:layout_marginLeft="25dp"
                                android:layout_marginTop="5dp"
                                android:layout_weight="1"
                                android:spinnerMode="dialog"
                                android:textAlignment="gravity" />

                            <Button
                                android:id="@+id/link_button_send"
                                android:layout_width="72dp"
                                android:layout_height="match_parent"
                                android:layout_marginRight="@dimen/link_search_margin_horiz"


                                android:backgroundTint="#E8B470"
                                android:text="@string/button_send" />


                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_margin="10dp"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toTopOf="@id/linearLayout"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:layout_editor_absoluteX="-4dp">

                        <EditText
                            android:id="@+id/editTextTextMultiLine2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:ems="10"
                            android:gravity="start|top"
                            android:hint="@string/search_hint"
                            android:inputType="textMultiLine"
                            android:singleLine="false" />
                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <ImageView
            android:id="@+id/link_topLine"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/pink"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/link_entity_circle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintVertical_bias="1.0"
                tools:layout_editor_absoluteX="0dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>